# MavlinkPatch

./: CMakeLists.txt  main.cpp  main.py  testMavMessage.xml
generator/: mavgen_c.py
generator/C/include_v2.0/: mavlink_types.h  protocol.h
messages/: protocol.h
messages/testMavMessage/: mavlink.h  mavlink_msg_heartbeat.h  testMavMessage.h  testsuite.h  version.h
